--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,5 @@
 deploy.ant.properties.file=/Users/dondull/Library/Application Support/NetBeans/17/tomcat101.properties
 j2ee.server.home=/Users/dondull/Downloads/apache-tomcat-10.1.30
 j2ee.server.instance=tomcat101:home=/Users/dondull/Downloads/apache-tomcat-10.1.30
+selected.browser=Chrome.INTEGRATED
 user.properties.file=/Users/dondull/Library/Application Support/NetBeans/17/build.properties
